--- a/index.html
+++ b/index.html
@@ -57,14 +57,38 @@ button:active {
 <body>
   <h1>Boite a <strong>feur</h1>
   <select id="sound-select">
-    <option value="Feur1.wav">Feur 1</option>
-    <option value="Feur2.wav">Feur 2</option>
-    <option value="Feur3.wav">Feur 3</option>
-	<option value="Feur3.wav">Feur 4</option>
-	<option value="Feur3.wav">Feur 5</option>
-	<option value="Feur3.wav">Feur 6</option>
-	<option value="Feur3.wav">Feur 7</option>
-	<option value="Feur3.wav">Feur 8</option>
+    <option value="Tim 1.wav">Tim 1</option>
+    <option value="Tim 2.wav">Tim 2</option>
+    <option value="Tim 3.wav">Tim 3</option>
+	<option value="Robin 1.wav">Robin 1</option>
+	<option value="Robin 2.wav">Robin 2</option>
+	<option value="Robin 3.wav">Robin 3</option>
+	<option value="Robin 4.wav">Robin 4</option>
+	<option value="Robin 5.wav">Robin 5</option>
+		<option value="Lucie 1.wav">Robin 1</option>
+		<option value="Lucie 2.wav">Robin 2</option>
+		<option value="Lucie 3.wav">Robin 3</option>
+		<option value="Lucie 4.wav">Robin 4</option>
+		<option value="Lucie 5.wav">Robin 5</option>
+	 		<option value="Selman 1.wav">Robin 1</option>
+			<option value="Selman 2.wav">Robin 2</option>
+			<option value="Selman 3.wav">Robin 3</option>
+			<option value="Selman 4.wav">Robin 4</option>
+			<option value="Selman 5.wav">Robin 5</option>
+	  	 		<option value="Cedric 1.wav">Robin 1</option>
+				<option value="Cedric 2.wav">Robin 2</option>
+				<option value="Cedric 3.wav">Robin 3</option>
+				<option value="Cedric 4.wav">Robin 4</option>
+	  	  	 		<option value="Soso 1.wav">Robin 1</option>
+					<option value="Soso 2.wav">Robin 2</option>
+					<option value="Soso 3.wav">Robin 3</option>
+					<option value="Soso 4.wav">Robin 4</option>
+	  	  	  	 		<option value="Daronne Selman 1.wav">Robin 1</option>
+						<option value="Daronne Selman 2.wav">Robin 2</option>
+						<option value="Daronne Selman 3.wav">Robin 3</option>
+	  	  	  	  	 		<option value="Bilel 1.wav">Robin 1</option>
+							<option value="Bilel 2.wav">Robin 2</option>
+							<option value="Bilel 3.wav">Robin 3</option>
 	
   </select>
   <button id="play-button">Jouer un feur</button>
