--- a/index.html
+++ b/index.html
@@ -57,39 +57,38 @@ button:active {
 <body>
   <h1>Boite a <strong>feur</h1>
   <select id="sound-select">
-    <option value="Tim 1.wav">Tim 1</option>
-    <option value="Tim 2.wav">Tim 2</option>
-    <option value="Tim 3.wav">Tim 3</option>
-	<option value="Robin 1.wav">Robin 1</option>
-	<option value="Robin 2.wav">Robin 2</option>
-	<option value="Robin 3.wav">Robin 3</option>
-	<option value="Robin 4.wav">Robin 4</option>
-	<option value="Robin 5.wav">Robin 5</option>
-		<option value="Lucie 1.wav">Robin 1</option>
-		<option value="Lucie 2.wav">Robin 2</option>
-		<option value="Lucie 3.wav">Robin 3</option>
-		<option value="Lucie 4.wav">Robin 4</option>
-		<option value="Lucie 5.wav">Robin 5</option>
-	 		<option value="Selman 1.wav">Robin 1</option>
-			<option value="Selman 2.wav">Robin 2</option>
-			<option value="Selman 3.wav">Robin 3</option>
-			<option value="Selman 4.wav">Robin 4</option>
-			<option value="Selman 5.wav">Robin 5</option>
-	  	 		<option value="Cedric 1.wav">Robin 1</option>
-				<option value="Cedric 2.wav">Robin 2</option>
-				<option value="Cedric 3.wav">Robin 3</option>
-				<option value="Cedric 4.wav">Robin 4</option>
-	  	  	 		<option value="Soso 1.wav">Robin 1</option>
-					<option value="Soso 2.wav">Robin 2</option>
-					<option value="Soso 3.wav">Robin 3</option>
-					<option value="Soso 4.wav">Robin 4</option>
-	  	  	  	 		<option value="Daronne Selman 1.wav">Robin 1</option>
-						<option value="Daronne Selman 2.wav">Robin 2</option>
-						<option value="Daronne Selman 3.wav">Robin 3</option>
-	  	  	  	  	 		<option value="Bilel 1.wav">Robin 1</option>
-							<option value="Bilel 2.wav">Robin 2</option>
-							<option value="Bilel 3.wav">Robin 3</option>
-	
+<option value="Tim 1.wav">Tim 1</option>
+<option value="Tim 2.wav">Tim 2</option>
+<option value="Tim 3.wav">Tim 3</option>
+<option value="Robin 1.wav">Robin 1</option>
+<option value="Robin 2.wav">Robin 2</option>
+<option value="Robin 3.wav">Robin 3</option>
+<option value="Robin 4.wav">Robin 4</option>
+<option value="Robin 5.wav">Robin 5</option>
+<option value="Lucie 1.wav">Lucie 1</option>
+<option value="Lucie 2.wav">Lucie 2</option>
+<option value="Lucie 3.wav">Lucie 3</option>
+<option value="Lucie 4.wav">Lucie 4</option>
+<option value="Lucie 5.wav">Lucie 5</option>
+<option value="Selman 1.wav">Selman 1</option>
+<option value="Selman 2.wav">Selman 2</option>
+<option value="Selman 3.wav">Selman 3</option>
+<option value="Selman 4.wav">Selman 4</option>
+<option value="Selman 5.wav">Selman 5</option>
+<option value="Cedric 1.wav">Cedric 1</option>
+<option value="Cedric 2.wav">Cedric 2</option>
+<option value="Cedric 3.wav">Cedric 3</option>
+<option value="Cedric 4.wav">Cedric 4</option>
+<option value="Soso 1.wav">Soso 1</option>
+<option value="Soso 2.wav">Soso 2</option>
+<option value="Soso 3.wav">Soso 3</option>
+<option value="Soso 4.wav">Soso 4</option>
+<option value="Daronne Selman 1.wav">Daronne Selman 1</option>
+<option value="Daronne Selman 2.wav">Daronne Selman 2</option>
+<option value="Daronne Selman 3.wav">Daronne Selman 3</option>
+<option value="Bilel 1.wav">Bilel 1</option>
+<option value="Bilel 2.wav">Bilel 2</option>
+<option value="Bilel 3.wav">Bilel 3</option>
   </select>
   <button id="play-button">Jouer un feur</button>
   <script>
