--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 	  height: 4vh;
 	  font-family: 'Poppins', sans-serif;
     }
+    h3 {
+      font-size: 15px;
+      text-align: center;
+      height: 1vh;
+      font-family: 'Poppins', sans-serif;
+    }
     /* Style pour les boutons */
     button {
       font-size: 24px;
@@ -108,5 +114,6 @@ button:active {
     });
 	
   </script>
+	<h3>Fait avec amour par toute la team</h3>
 </body>
 </html>
