--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@ button:active {
 <option value="Bilel 1.wav">Bilel 1</option>
 <option value="Bilel 2.wav">Bilel 2</option>
 <option value="Bilel 3.wav">Bilel 3</option>
-<option value="Ruben.mp3">Bilel 1</option>
-<option value="Ruben 2.mp3">Bilel 2</option>
-<option value="Ruben 3.mp3">Bilel 3</option>
-<option value="Ruben 4.mp3">Bilel 2</option>
+<option value="Ruben.mp3">Ruben 1</option>
+<option value="Ruben 2.mp3">Ruben 2</option>
+<option value="Ruben 3.mp3">Ruben 3</option>
+<option value="Ruben 4.mp3">Ruben 4</option>
 <option value="Miff de Selman.wav">Miff de Selman</option>
   </select>
   <button id="play-button">Jouer un feur</button>
