--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@ button:active {
 <option value="Soso 2.wav">Soso 2</option>
 <option value="Soso 3.wav">Soso 3</option>
 <option value="Soso 4.wav">Soso 4</option>
+<option value="Ariela 1.wav">Ariela 1</option>
+<option value="Ariela 2.wav">Ariela 2</option>
+<option value="Ariela 3.wav">Ariela 3</option>
+<option value="Ariela 4.wav">Ariela 4</option>
 <option value="Daronne Selman 1.wav">Daronne Selman 1</option>
 <option value="Daronne Selman 2.wav">Daronne Selman 2</option>
 <option value="Daronne Selman 3.wav">Daronne Selman 3</option>
