--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@ button:active {
 <option value="Ruben 3.mp3">Ruben 3</option>
 <option value="Ruben 4.mp3">Ruben 4</option>
 <option value="Miff de Selman.wav">Miff de Selman</option>
-<option value="Marco_1.mp3">Marco 1</option>
-<option value="Marco_2.mp3">Marco 2</option>
-<option value="Marco_3.mp3">Marco 3</option>
+<option value="Marco_1.wav">Marco 1</option>
+<option value="Marco_2.wav">Marco 2</option>
+<option value="Marco_3.wav">Marco 3</option>
   </select>
   <button id="play-button">Jouer un feur</button>
   <script>
