--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@ button:active {
 <option value="Marco_1.wav">Marco 1</option>
 <option value="Marco_2.wav">Marco 2</option>
 <option value="Marco_3.wav">Marco 3</option>
+<option value="Leo1.wav">Leo 1</option>
+<option value="Leo2.wav">Leo 2</option>
+<option value="Leo3.wav">Leo 3</option>
   </select>
   <button id="play-button">Jouer un feur</button>
   <script>
