--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ button:active {
 <option value="Leo1.wav">Leo 1</option>
 <option value="Leo2.wav">Leo 2</option>
 <option value="Leo3.wav">Leo 3</option>
+<option value="Leo4.wav">Leo 4</option>
   </select>
   <button id="play-button">Jouer un feur</button>
   <script>
