--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@ button:active {
 <option value="Leo2.wav">Leo 2</option>
 <option value="Leo3.wav">Leo 3</option>
 <option value="Leo4.wav">Leo 4</option>
+<option value="Gabriel 1.wav">Gabriel 1</option>
+<option value="Gabriel 2.wav">Gabriel 2</option>
+<option value="Gabriel 3.wav">Gabriel 3</option>
   </select>
   <button id="play-button">Jouer un feur</button>
   <script>
