--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@ button:active {
 <option value="Gabriel 1.wav">Gabriel 1</option>
 <option value="Gabriel 2.wav">Gabriel 2</option>
 <option value="Gabriel 3.wav">Gabriel 3</option>
+<option value="Ilan 1.mp3">Ilan 1</option>
+<option value="Ilan 2.mp3">Ilan 2</option>
+<option value="Ilan 3.mp3">Ilan 3</option>
   </select>
   <button id="play-button">Jouer un feur</button>
   <script>
