--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@ button:active {
 <option value="Ilan 1.mp3">Ilan 1</option>
 <option value="Ilan 2.mp3">Ilan 2</option>
 <option value="Ilan 3.mp3">Ilan 3</option>
+<option value="Johane 1.wav">Johane 1</option>
   </select>
   <button id="play-button">Jouer un feur</button>
   <script>
