--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@ button:active {
 <option value="Ilan 2.mp3">Ilan 2</option>
 <option value="Ilan 3.mp3">Ilan 3</option>
 <option value="Johane 1.wav">Johane 1</option>
+<option value="Johane 2.wav">Johane 2</option>
+<option value="Johane 3.wav">Johane 3</option>
+<option value="Loula 1.wav">Loula 1</option>
+<option value="Loula 2.wav">Loula 2</option>
+<option value="Loula 3.wav">Loula 3</option>
   </select>
   <button id="play-button">Jouer un feur</button>
   <script>
