--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ button:active {
   </style>
 </head>
 <body>
-  <h1>Boite a <strong>feur</h1>
+  <h1>Boite à <strong>feur</h1>
   <select id="sound-select">
 <option value="Tim 1.wav">Tim 1</option>
 <option value="Tim 2.wav">Tim 2</option>
