--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@ button:active {
 <option value="Loula 1.wav">Loula 1</option>
 <option value="Loula 2.wav">Loula 2</option>
 <option value="Loula 3.wav">Loula 3</option>
+<option value="Eva 1.wav">Eva 1</option>
+<option value="Eva 2.wav">Eva 2</option>
+<option value="Eva 3.wav">Eva 3</option>
   </select>
   <button id="play-button">Jouer un feur</button>
   <script>
