--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@ button:active {
 <option value="Eva 1.wav">Eva 1</option>
 <option value="Eva 2.wav">Eva 2</option>
 <option value="Eva 3.wav">Eva 3</option>
-<option value="zoe1.mp3">Zoé 1</option>
-<option value="zoe2.mp3">Zoé 2</option>
-<option value="zoe3.mp3">Zoé 3</option>
+<option value="zoe1.wav">Zoé 1</option>
+<option value="zoe2.wav">Zoé 2</option>
+<option value="zoe3.wav">Zoé 3</option>
   </select>
   <button id="play-button">Jouer un feur</button>
   <script>
